--- a/src/NFS_XtendedInput.vcxproj
+++ b/src/NFS_XtendedInput.vcxproj
@@ -472,7 +472,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/prostreet_debug.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Debug ProStreet</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-ProStreet-Win7|Win32'">
@@ -680,7 +680,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/prostreet.bat" Release ProStreet</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Release ProStreet</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-ProStreet-Win7|Win32'">
