--- a/src/NFS_XtendedInput.vcxproj
+++ b/src/NFS_XtendedInput.vcxproj
@@ -398,7 +398,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/mw_debug.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Debug MW</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-MW-Win7|Win32'">
@@ -416,7 +416,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/mw_debug_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Debug MW-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-Carbon|Win32'">
@@ -435,7 +435,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/carbon_debug.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Debug Carbon</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-Carbon-Win7|Win32'">
@@ -453,7 +453,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/carbon_debug_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Debug Carbon-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-ProStreet|Win32'">
@@ -490,7 +490,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/prostreet_debug_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Debug ProStreet-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-UC|Win32'">
@@ -509,7 +509,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/uc_debug.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Debug UC</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-UC-Win7|Win32'">
@@ -526,7 +526,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/uc_debug_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Debug UC-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-World|Win32'">
@@ -545,7 +545,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/world_debug.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Debug World</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug-World-Win7|Win32'">
@@ -562,7 +562,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/world_debug_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Debug World-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-MW|Win32'">
@@ -586,7 +586,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/mw.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Release MW</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-MW-Win7|Win32'">
@@ -609,7 +609,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/mw_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Release MW-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-Carbon|Win32'">
@@ -633,7 +633,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/carbon.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Release Carbon</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-Carbon-Win7|Win32'">
@@ -656,7 +656,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/carbon_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Release Carbon-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-ProStreet|Win32'">
@@ -703,7 +703,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/prostreet_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/HasTPK.bat" Release ProStreet-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-UC|Win32'">
@@ -727,7 +727,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/uc.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Release UC</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-UC-Win7|Win32'">
@@ -749,7 +749,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/uc_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Release UC-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-World|Win32'">
@@ -773,7 +773,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/world.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Release World</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release-World-Win7|Win32'">
@@ -795,7 +795,7 @@
     </Link>
     <PostBuildEvent>
       <Message>Making final build package...</Message>
-      <Command>@call "$(SolutionDir)../data/post-build/world_win7.bat"</Command>
+      <Command>@call "$(SolutionDir)../data/post-build/NoTPK.bat" Release World-Win7</Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
