Remove `_Primary` suffix from primary configuration for backwards compatibility

--- a/data/Config-Carbon/NFS_XtendedInput.ini
+++ b/data/Config-Carbon/NFS_XtendedInput.ini
@@ -20,7 +20,7 @@ UseDynamicFEngSwitching = 1 // enable/disable dynamic FEng switching for button 
 EnableSplashTakeover = 1    // splash screen continue button text takeover
 ButtonTexFilename = GLOBAL\XtendedInputButtons.tpk
 
-[Events_Primary]
+[Events]
 FRONTENDACTION_UP = XINPUT_GAMEPAD_DPAD_UP
 FRONTENDACTION_DOWN = XINPUT_GAMEPAD_DPAD_DOWN
 FRONTENDACTION_LEFT = XINPUT_GAMEPAD_DPAD_LEFT
@@ -93,7 +93,7 @@ DEBUGACTION_MOVE_D_FORWARD = XINPUT_GAMEPAD_Y
 DEBUGACTION_MOVE_D_BACK = XINPUT_GAMEPAD_A
 DEBUGACTION_MOVE_D_LEFT = XINPUT_GAMEPAD_X
 DEBUGACTION_MOVE_D_RIGHT = XINPUT_GAMEPAD_B
-[EventsKB_Primary]
+[EventsKB]
 FRONTENDACTION_UP = VK_UP
 FRONTENDACTION_DOWN = VK_DOWN
 FRONTENDACTION_LEFT = VK_LEFT
