--- a/data/Config-World/NFS_XtendedInput.ini
+++ b/data/Config-World/NFS_XtendedInput.ini
@@ -10,7 +10,7 @@ DeadzonePercent_Shifting = 0.75 // deadzone for shifting digital activation
 DeadzonePercent_AnalogStickDigital = 0.50 // deadzone for analog sticks digital activation
 DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
 
-[Events_Primary]
+[Events]
 FRONTENDACTION_UP = XINPUT_GAMEPAD_DPAD_UP
 FRONTENDACTION_DOWN = XINPUT_GAMEPAD_DPAD_DOWN
 FRONTENDACTION_LEFT = XINPUT_GAMEPAD_DPAD_LEFT
@@ -81,7 +81,7 @@ DEBUGACTION_MOVE_D_FORWARD = XINPUT_GAMEPAD_Y
 DEBUGACTION_MOVE_D_BACK = XINPUT_GAMEPAD_A
 DEBUGACTION_MOVE_D_LEFT = XINPUT_GAMEPAD_X
 DEBUGACTION_MOVE_D_RIGHT = XINPUT_GAMEPAD_B
-[EventsKB_Primary]
+[EventsKB]
 FRONTENDACTION_UP = VK_UP
 FRONTENDACTION_DOWN = VK_DOWN
 FRONTENDACTION_LEFT = VK_LEFT
