general improvements + new features

--- a/data/Config-ProStreet/NFS_XtendedInput.default.ini
+++ b/data/Config-ProStreet/NFS_XtendedInput.default.ini
@@ -22,7 +22,7 @@ FRONTENDACTION_BUTTON5 = XINPUT_GAMEPAD_Y
 FRONTENDACTION_LTRIGGER = XINPUT_GAMEPAD_LT
 FRONTENDACTION_RTRIGGER = XINPUT_GAMEPAD_RT
 FRONTENDACTION_START = XINPUT_GAMEPAD_START
-// In-Game controls
+; In-Game controls
 GAMEACTION_GAS = XINPUT_GAMEPAD_RT
 GAMEACTION_BRAKE = XINPUT_GAMEPAD_LT
 GAMEACTION_STEERLEFT = XINPUT_GAMEPAD_LS_LEFT
@@ -44,7 +44,7 @@ HUDACTION_SKIPNIS = XINPUT_GAMEPAD_A
 HUDACTION_NEXTSONG = XINPUT_GAMEPAD_RIGHT_THUMB
 CAMERAACTION_CHANGE = XINPUT_GAMEPAD_X
 CAMERAACTION_LOOKBACK = XINPUT_GAMEPAD_Y
-// Debug camera
+; Debug camera
 CAMERAACTION_DEBUG = XINPUT_GAMEPAD_BACK
 DEBUGACTION_DROPCAR = XINPUT_GAMEPAD_START
 DEBUGACTION_MOVE_FORWARD = XINPUT_GAMEPAD_LS_UP
@@ -87,7 +87,7 @@ FRONTENDACTION_BUTTON5 = 1
 FRONTENDACTION_LTRIGGER = 9
 FRONTENDACTION_RTRIGGER = 0
 FRONTENDACTION_START = VK_SPACE
-// In-Game controls
+; In-Game controls
 GAMEACTION_GAS = VK_UP
 GAMEACTION_BRAKE = VK_DOWN
 GAMEACTION_STEERLEFT = VK_LEFT
@@ -105,7 +105,7 @@ HUDACTION_SKIPNIS = VK_RETURN
 CAMERAACTION_CHANGE = C
 CAMERAACTION_LOOKBACK = L
 CAMERAACTION_PULLBACK = P
-// Debug camera
+; Debug camera
 CAMERAACTION_DEBUG = VK_SUBTRACT
 DEBUGACTION_DROPCAR = 5
 DEBUGACTION_MOVE_FORWARD = W
