--- a/data/Config-World/NFS_XtendedInput.ini
+++ b/data/Config-World/NFS_XtendedInput.ini
@@ -1,14 +1,18 @@
 [Input]
-KeyboardReadingMode = 0 // 0 = async unbuffered, 1 = buffered
-MouseLook = 1 // use mouse for looking during DebugWorldCamera (this will stick and hide the cursor to the window center during the camera)
-MouseLookSensitivity = 1.0
-DeadzonePercentLS = 0.24 // set the percentage of deadzone for each stick here (default 24% = 0.24)
-DeadzonePercentRS = 0.24
-DeadzonePercentLS_P2 = 0.24
-DeadzonePercentRS_P2 = 0.24
-DeadzonePercent_Shifting = 0.75 // deadzone for shifting digital activation
-DeadzonePercent_AnalogStickDigital = 0.50 // deadzone for analog sticks digital activation
-DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
+KeyboardReadingMode = 0                                   ; 0 = async unbuffered, 1 = buffered
+XInputOmniMode = 0                                        ; reads from all 4 XInput ports at the same time to the player 1 and 2 inputs
+PassConnStatus = 1                                        ; passes the connection status of the controller to the game, so when you disconnect the controller the game will pause like in the console versions
+MouseLook = 1                                             ; use mouse for looking during DebugWorldCamera (this will stick and hide the cursor to the window center during the camera)
+MouseLookSensitivity = 1.0                                ; sets the mouse sensitivity for mouse look
+
+[Deadzone]
+; set the percentage of deadzone for each stick here (default 24% = 0.24)
+PercentLS = 0.24                                          ; left stick deadzone
+PercentRS = 0.24								          ; right stick deadzone
+PercentLS_P2 = 0.24								          ; left stick deadzone (Port 2)
+PercentRS_P2 = 0.24								          ; right stick deadzone (Port 2)
+Percent_Shifting = 0.75                                   ; deadzone for shifting digital activation (how far you need to press the trigger for it to register)
+Percent_AnalogStickDigital = 0.50                         ; deadzone for analog sticks digital activation
 
 [Events]
 FRONTENDACTION_UP = XINPUT_GAMEPAD_DPAD_UP
@@ -34,7 +38,7 @@ FRONTENDACTION_BUTTON5 = XINPUT_GAMEPAD_Y
 FRONTENDACTION_LTRIGGER = XINPUT_GAMEPAD_LT
 FRONTENDACTION_RTRIGGER = XINPUT_GAMEPAD_RT
 FRONTENDACTION_START = XINPUT_GAMEPAD_START
-// In-Game controls
+; In-Game controls
 GAMEACTION_GAS = XINPUT_GAMEPAD_RT
 GAMEACTION_BRAKE = XINPUT_GAMEPAD_LT
 GAMEACTION_STEERLEFT = XINPUT_GAMEPAD_LS_LEFT
@@ -58,7 +62,7 @@ GAMEACTION_TOGGLE_COPLIGHTS = XINPUT_GAMEPAD_LEFT_THUMB
 GAMEACTION_TOGGLE_AUTODRIVE = XINPUT_GAMEPAD_RIGHT_THUMB
 CAMERAACTION_CHANGE = XINPUT_GAMEPAD_RIGHT_SHOULDER
 CAMERAACTION_LOOKBACK = XINPUT_GAMEPAD_LEFT_SHOULDER
-// Debug camera
+; Debug camera
 CAMERAACTION_DEBUG = XINPUT_GAMEPAD_BACK
 DEBUGACTION_DROPCAR = XINPUT_GAMEPAD_START
 DEBUGACTION_MOVE_FORWARD = XINPUT_GAMEPAD_LS_UP
@@ -101,7 +105,7 @@ FRONTENDACTION_BUTTON5 = 1
 FRONTENDACTION_LTRIGGER = 9
 FRONTENDACTION_RTRIGGER = 0
 FRONTENDACTION_START = VK_SPACE
-// In-Game controls
+; In-Game controls
 GAMEACTION_GAS = VK_UP
 GAMEACTION_BRAKE = VK_DOWN
 GAMEACTION_STEERLEFT = VK_LEFT
@@ -127,7 +131,7 @@ HUDACTION_SKIPNIS = VK_RETURN
 CAMERAACTION_CHANGE = C
 CAMERAACTION_LOOKBACK = L
 CAMERAACTION_PULLBACK = P
-// Debug camera
+; Debug camera
 CAMERAACTION_DEBUG = VK_SUBTRACT
 DEBUGACTION_DROPCAR = 5
 DEBUGACTION_MOVE_FORWARD = W
