--- a/data/Config-Carbon/NFS_XtendedInput.ini
+++ b/data/Config-Carbon/NFS_XtendedInput.ini
@@ -1,23 +1,29 @@
 [Input]
-KeyboardReadingMode = 0 // 0 = async unbuffered, 1 = buffered
-ConfineMouse = 0 // confine mouse within the game window
-UseWin32Cursor = 1 // use Win32/OS to render the mouse (recommended for performance benefits)
-UseCustomCursor = 1 // use the nfs_cursor.cur file as the cursor style
-MouseLook = 1 // use mouse for looking during DebugWorldCamera (this will stick and hide the cursor to the window center during the camera)
-MouseLookSensitivity = 1.0
-DeadzonePercentLS = 0.24 // set the percentage of deadzone for each stick here (default 24% = 0.24)
-DeadzonePercentRS = 0.24
-DeadzonePercentLS_P2 = 0.24
-DeadzonePercentRS_P2 = 0.24
-DeadzonePercent_Shifting = 0.75 // deadzone for shifting digital activation
-DeadzonePercent_AnalogStickDigital = 0.50 // deadzone for analog sticks digital activation
-DeadzonePercent_AnalogTriggerDigital = 0.12 // same for triggers
+KeyboardReadingMode = 0                                   ; 0 = async unbuffered, 1 = buffered
+XInputOmniMode = 0                                        ; reads from all 4 XInput ports at the same time to the player 1 and 2 inputs
+PassConnStatus = 1                                        ; passes the connection status of the controller to the game, so when you disconnect the controller the game will pause like in the console versions
+ConfineMouse = 0                                          ; confine mouse within the game window
+UseWin32Cursor = 1                                        ; use Win32/OS to render the mouse (recommended for performance benefits)
+UseCustomCursor = 1                                       ; use the nfs_cursor.cur file as the cursor style
+EnableMouseHiding = 1                                     ; enables automatic mouse hiding after 5 seconds
+MouseLook = 1                                             ; use mouse for looking during DebugWorldCamera (this will stick and hide the cursor to the window center during the camera)
+MouseLookSensitivity = 1.0                                ; sets the mouse sensitivity for mouse look
+
+[Deadzone]
+; set the percentage of deadzone for each stick here (default 24% = 0.24)
+PercentLS = 0.24                                          ; left stick deadzone
+PercentRS = 0.24								          ; right stick deadzone
+PercentLS_P2 = 0.24								          ; left stick deadzone (Port 2)
+PercentRS_P2 = 0.24								          ; right stick deadzone (Port 2)
+Percent_Shifting = 0.75                                   ; deadzone for shifting digital activation (how far you need to press the trigger for it to register)
+Percent_AnalogStickDigital = 0.50                         ; deadzone for analog sticks digital activation
+Percent_AnalogTriggerDigital = 0.12                       ; same for triggers
 
 [Icons]
-ControllerIconMode = 0 // 0 = Xbox One, 1 = PS4, 2 = Xbox 360, 3 = PS3, 4 = Switch, 5 = 360 (MW)
-FirstControlDevice = 0 // 0 = Keyboard, 1 = Controller -- for setting the first state
-UseDynamicFEngSwitching = 1 // enable/disable dynamic FEng switching for button icons
-EnableSplashTakeover = 1    // splash screen continue button text takeover
+ControllerIconMode = 0                                    ; 0 = Xbox One, 1 = PS4, 2 = Xbox 360, 3 = PS3, 4 = Switch, 5 = 360 (MW)
+FirstControlDevice = 0                                    ; 0 = Keyboard, 1 = Controller -- for setting the first state
+UseDynamicFEngSwitching = 1                               ; enable/disable dynamic FEng switching for button icons
+EnableSplashTakeover = 1                                  ; splash screen continue button text takeover
 ButtonTexFilename = GLOBAL\XtendedInputButtons.tpk
 
 [Events]
@@ -44,7 +50,7 @@ FRONTENDACTION_BUTTON5 = XINPUT_GAMEPAD_Y
 FRONTENDACTION_LTRIGGER = XINPUT_GAMEPAD_LT
 FRONTENDACTION_RTRIGGER = XINPUT_GAMEPAD_RT
 FRONTENDACTION_START = XINPUT_GAMEPAD_START
-// In-Game controls
+; In-Game controls
 GAMEACTION_GAS = XINPUT_GAMEPAD_RT
 GAMEACTION_BRAKE = XINPUT_GAMEPAD_LT
 GAMEACTION_STEERLEFT = XINPUT_GAMEPAD_LS_LEFT
@@ -70,7 +76,7 @@ HUDACTION_SKIPNIS = XINPUT_GAMEPAD_A
 HUDACTION_NEXTSONG = XINPUT_GAMEPAD_RIGHT_THUMB
 CAMERAACTION_CHANGE = XINPUT_GAMEPAD_RIGHT_SHOULDER
 CAMERAACTION_LOOKBACK = XINPUT_GAMEPAD_LEFT_SHOULDER
-// Debug camera
+; Debug camera
 CAMERAACTION_DEBUG = XINPUT_GAMEPAD_BACK
 DEBUGACTION_DROPCAR = XINPUT_GAMEPAD_START
 DEBUGACTION_MOVE_FORWARD = XINPUT_GAMEPAD_LS_UP
@@ -113,7 +119,7 @@ FRONTENDACTION_BUTTON5 = 1
 FRONTENDACTION_LTRIGGER = 9
 FRONTENDACTION_RTRIGGER = 0
 FRONTENDACTION_START = VK_SPACE
-// In-Game controls
+; In-Game controls
 GAMEACTION_GAS = VK_UP
 GAMEACTION_BRAKE = VK_DOWN
 GAMEACTION_STEERLEFT = VK_LEFT
@@ -139,7 +145,7 @@ HUDACTION_SKIPNIS = VK_RETURN
 CAMERAACTION_CHANGE = C
 CAMERAACTION_LOOKBACK = L
 CAMERAACTION_PULLBACK = P
-// Debug camera
+; Debug camera
 CAMERAACTION_DEBUG = VK_SUBTRACT
 DEBUGACTION_DROPCAR = 5
 DEBUGACTION_MOVE_FORWARD = W
