--- a/src/NFS_XtendedInput.vcxproj
+++ b/src/NFS_XtendedInput.vcxproj
@@ -835,12 +835,22 @@
     <ClCompile Include="_win32\dllmain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\data\Config-Carbon\NFS_XtendedInput.default.ini" />
     <None Include="..\data\Config-Carbon\NFS_XtendedInput.ini" />
+    <None Include="..\data\Config-MW\NFS_XtendedInput.default.ini" />
     <None Include="..\data\Config-MW\NFS_XtendedInput.ini" />
     <None Include="..\data\Config-ProStreet\NFS_XtendedInput.default.ini" />
     <None Include="..\data\Config-ProStreet\NFS_XtendedInput.ini" />
+    <None Include="..\data\Config-UC\NFS_XtendedInput.default.ini" />
     <None Include="..\data\Config-UC\NFS_XtendedInput.ini" />
+    <None Include="..\data\Config-World\NFS_XtendedInput.default.ini" />
     <None Include="..\data\Config-World\NFS_XtendedInput.ini" />
+    <None Include="..\data\post-build\HasTPK-MW-Win7.bat" />
+    <None Include="..\data\post-build\HasTPK-MW.bat" />
+    <None Include="..\data\post-build\HasTPK-Win7.bat" />
+    <None Include="..\data\post-build\HasTPK.bat" />
+    <None Include="..\data\post-build\NoTPK-Win7.bat" />
+    <None Include="..\data\post-build\NoTPK.bat" />
     <None Include="NFS_XtendedInput.licenseheader" />
   </ItemGroup>
   <ItemGroup>
